--- a/web/index.html
+++ b/web/index.html
@@ -20,23 +20,7 @@
 
 <body style="font-family: Arial;border: 0 none;">
 
-<div align='center' style='margin-top:30px;'>
-<img src='https://www.cryptonoter.com/img/logo-300.png' />
-
-<div style='margin-top:30px;margin-bottom:20px;font-size:16px;'>
-<b>Updates & Developments</b><br />
-19/12/17: CryptoNoter Now Support ByteCoin (BCN) Coin<br />
-18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins<br />
-17/12/17: Use pool.cryptonoter.com:1111 for javascript web mining
-</div>
-
-<img src='https://www.cryptonoter.com/img/monero-logo.png' />
-<img src='https://www.cryptonoter.com/img/electroneum-logo.png' />
-<img src='https://www.cryptonoter.com/img/bytecoin-logo.png' />
-<br /><br /><br />
-
-<a href='https://www.cryptonoter.com/demo.php' />Try CryptoNoter Demo</a> | <a href='https://pool.cryptonoter.com' />Join My Monero Mining Pool</a> | <a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a><br /><br />
-<a href='https://www.facebook.com/cryptonoter/' />Follow Me at Facebook</a> | <a href='https://www.twitter.com/cryptonoter/' />Follow Me at Twitter</a>
+<a href='https://nladuo.cn/demo.php' />Try CryptoNoter Demo</a> 
 
 </div>
 </body>
