--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
 
 <body style="font-family: Arial;border: 0 none;">
 
-<a href='https://nladuo.cn/demo.php' />Try CryptoNoter Demo</a> 
+<a href='http://nladuo.cn:7777/demo.html' />Try CryptoNoter Demo</a> 
 
 </div>
 </body>
